# msgspec-crockford

./: .gitignore  AGENTS.md  Makefile  README.md  _pycrockford_rs_bindings.pyi  pyproject.toml  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: crockford-uuids-with-msgspec-rust.md
docs/source/: api.rst  conf.py  index.rst  usage.rst
msgspec_crockford/: __init__.py  exceptions.py  hooks.py  types.py
msgspec_crockford/unittests/: test_hooks.py  test_integration.py  test_types.py
pycrockford_msgspec/: __init__.py  hooks.py
pycrockford_msgspec/unittests/: test_hooks.py
pycrockford_rs/: Cargo.toml
pycrockford_rs/src/: lib.rs
pycrockford_rs/tests/: basic.rs  test_bindings.py
scripts/: typos_rollout.py
