[package]
name = "pycrockford_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pycrockford_rs_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1"
data-encoding = "2"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
uuid = { version = "1", features = ["v4", "v7"] }
