[package]
name = "pycrockford_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pycrockford_rs_bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
data-encoding = "2"
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
uuid = { version = "1", features = ["v4", "v7"] }
